make sure title is shown on mobile skin start-state

--- a/skins/kdark/css/layout.css
+++ b/skins/kdark/css/layout.css
@@ -200,7 +200,7 @@ body {
     display: -webkit-box !important;
 }
 
-.mobileSkin.ua-chromecast.start-state .titleLabel{
+.mobileSkin.start-state .titleLabel{
     display: block !important;
     display: -webkit-box !important;
 }
